[package]
name = "get401"
version = "0.1.0"
edition = "2021"
description = "Core Rust SDK for get401 authentication — EdDSA/Ed25519 JWT verification."
license = "MIT"
repository = "https://github.com/get401/rs-core"
homepage = "https://get401.com"
keywords = ["get401", "authentication", "jwt", "eddsa", "ed25519"]
categories = ["authentication", "web-programming", "network-programming"]
readme = "README.md"

[dependencies]
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
jsonwebtoken = "9"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio       = { version = "1",    features = ["sync"] }
thiserror   = "2"
base64      = "0.22"
