[package]
name = "get401"
version = "0.1.0"
edition = "2021"
description = "Core Rust SDK for get401 authentication — EdDSA/Ed25519 JWT verification."
license = "MIT"
repository = "https://github.com/get401/rust-core"
homepage = "https://get401.com"
keywords = ["get401", "authentication", "jwt", "eddsa", "ed25519"]
categories = ["authentication", "web-programming", "network-programming"]
readme = "README.md"

[dependencies]
serde       = { version = "1.0.228",    features = ["derive"] }
serde_json  = "1.0.149"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest     = { version = "0.13", features = ["json"] }
tokio       = { version = "1.50", features = ["sync"] }
thiserror   = "2.0.18"
base64      = "0.22.1"
